--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,9 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: docker-build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && vars.ENABLE_DOCKER_BUILD == 'true'
     environment: staging
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
 
     steps:
       - name: Checkout
