--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -9,6 +9,7 @@ COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
+COPY packages/dashboard/package.json ./packages/dashboard/
 COPY apps/scheduler/package.json ./apps/scheduler/
 COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
@@ -21,8 +22,9 @@ COPY packages/database ./packages/database
 COPY packages/nivoda ./packages/nivoda
 COPY packages/pricing-engine ./packages/pricing-engine
 COPY packages/api ./packages/api
+COPY packages/dashboard ./packages/dashboard
 
-RUN npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/nivoda && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api
+RUN npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/nivoda && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/dashboard
 
 FROM node:20-alpine
 
@@ -35,6 +37,7 @@ COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
+COPY packages/dashboard/package.json ./packages/dashboard/
 COPY apps/scheduler/package.json ./apps/scheduler/
 COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
@@ -46,6 +49,7 @@ COPY --from=builder /app/packages/database/dist ./packages/database/dist
 COPY --from=builder /app/packages/nivoda/dist ./packages/nivoda/dist
 COPY --from=builder /app/packages/pricing-engine/dist ./packages/pricing-engine/dist
 COPY --from=builder /app/packages/api/dist ./packages/api/dist
+COPY --from=builder /app/packages/dashboard/dist ./packages/dashboard/dist
 
 EXPOSE 3000
 
