--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -9,10 +9,10 @@ COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
-COPY packages/dashboard/package.json ./packages/dashboard/
 COPY apps/scheduler/package.json ./apps/scheduler/
 COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
+COPY apps/dashboard/package.json ./apps/dashboard/
 
 RUN npm ci
 
@@ -22,7 +22,6 @@ COPY packages/database ./packages/database
 COPY packages/nivoda ./packages/nivoda
 COPY packages/pricing-engine ./packages/pricing-engine
 COPY packages/api ./packages/api
-COPY packages/dashboard ./packages/dashboard
 
 RUN npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/nivoda && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/dashboard
 
@@ -37,10 +36,10 @@ COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
-COPY packages/dashboard/package.json ./packages/dashboard/
 COPY apps/scheduler/package.json ./apps/scheduler/
 COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
+COPY apps/dashboard/package.json ./apps/dashboard/
 
 RUN npm ci --omit=dev
 
