--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -2,17 +2,12 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Copy all package.json files for npm workspaces
 COPY package*.json ./
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
-COPY apps/scheduler/package.json ./apps/scheduler/
-COPY apps/worker/package.json ./apps/worker/
-COPY apps/consolidator/package.json ./apps/consolidator/
-COPY apps/dashboard/package.json ./apps/dashboard/
 
 RUN npm ci
 
@@ -23,23 +18,18 @@ COPY packages/nivoda ./packages/nivoda
 COPY packages/pricing-engine ./packages/pricing-engine
 COPY packages/api ./packages/api
 
-RUN npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/nivoda && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/dashboard
+RUN npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/nivoda && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api
 
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy all package.json files for npm workspaces
 COPY package*.json ./
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/database/package.json ./packages/database/
 COPY packages/nivoda/package.json ./packages/nivoda/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/api/package.json ./packages/api/
-COPY apps/scheduler/package.json ./apps/scheduler/
-COPY apps/worker/package.json ./apps/worker/
-COPY apps/consolidator/package.json ./apps/consolidator/
-COPY apps/dashboard/package.json ./apps/dashboard/
 
 RUN npm ci --omit=dev
 
@@ -48,7 +38,6 @@ COPY --from=builder /app/packages/database/dist ./packages/database/dist
 COPY --from=builder /app/packages/nivoda/dist ./packages/nivoda/dist
 COPY --from=builder /app/packages/pricing-engine/dist ./packages/pricing-engine/dist
 COPY --from=builder /app/packages/api/dist ./packages/api/dist
-COPY --from=builder /app/packages/dashboard/dist ./packages/dashboard/dist
 
 EXPOSE 3000
 
