--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           images: ${{ secrets.ACR_LOGIN_SERVER }}/diamond-${{ matrix.app }}
           tags: |
-            type=sha,prefix=
+            type=sha,format=short,prefix=
             type=raw,value=staging
 
       - name: Build and push
@@ -68,33 +68,27 @@ jobs:
       - name: Get commit SHA
         id: sha
         run: echo "short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
+        
       - name: Update Container Apps
         run: |
-          # Update API
+          set -euo pipefail
+
           az containerapp update \
             --name diamond-staging-api \
             --resource-group diamond-staging-rg \
-            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-api:${{ steps.sha.outputs.short }} \
-            || echo "API container app not found, skipping..."
+            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-api:${{ steps.sha.outputs.short }}
 
-          # Update Worker
           az containerapp update \
             --name diamond-staging-worker \
             --resource-group diamond-staging-rg \
-            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-worker:${{ steps.sha.outputs.short }} \
-            || echo "Worker container app not found, skipping..."
+            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-worker:${{ steps.sha.outputs.short }}
 
-          # Update Consolidator
           az containerapp update \
             --name diamond-staging-consolidator \
             --resource-group diamond-staging-rg \
-            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-consolidator:${{ steps.sha.outputs.short }} \
-            || echo "Consolidator container app not found, skipping..."
+            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-consolidator:${{ steps.sha.outputs.short }}
 
-          # Update Scheduler Job
           az containerapp job update \
             --name diamond-staging-scheduler \
             --resource-group diamond-staging-rg \
-            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-scheduler:${{ steps.sha.outputs.short }} \
-            || echo "Scheduler job not found, skipping..."
+            --image ${{ secrets.ACR_LOGIN_SERVER }}/diamond-scheduler:${{ steps.sha.outputs.short }}
