--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node dist/main.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "swagger": "tsx src/swagger/generator.ts"
