--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -42,4 +42,4 @@ COPY --from=builder /app/packages/api/dist ./packages/api/dist
 
 EXPOSE 3000
 
-CMD ["node", "packages/api/dist/index.js"]
+CMD ["npm", "run", "-w", "@diamond/api", "start"]
