--- a/docker/nginx.dashboard.conf
+++ b/docker/nginx.dashboard.conf
@@ -1,41 +1,40 @@
 server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+  listen 80;
+  server_name localhost;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    # Gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Proxy API requests to the backend
-    location /api/ {
-        proxy_pass ${API_URL}/api/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-    }
+  location = /__nginx_debug {
+    return 200 "API_URL=${API_URL}\n";
+  }
 
-    # Proxy health check
-    location /health {
-        proxy_pass ${API_URL}/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-    }
+  location ^~ /api/ {
+    proxy_pass ${API_URL};
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
+  }
 
-    # Serve static files and handle SPA routing
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  location = /health {
+    proxy_pass ${API_URL}/health;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+  }
 
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
+
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+  }
 }
