--- a/docker/nginx.dashboard.conf
+++ b/docker/nginx.dashboard.conf
@@ -1,5 +1,9 @@
 server {
   listen 80;
+
+  error_log /var/log/nginx/error.log notice;
+  resolver 168.63.129.16 valid=10s ipv6=off;
+
   server_name localhost;
   root /usr/share/nginx/html;
   index index.html;
@@ -14,19 +18,30 @@ server {
   location ^~ /api/ {
     proxy_pass ${API_URL};
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
+
+    proxy_ssl_server_name on;
+    proxy_set_header Host $proxy_host;
+
+    proxy_set_header Connection "";
+    proxy_read_timeout 60s;
+    proxy_connect_timeout 10s;
+    proxy_send_timeout 60s;
+
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_cache_bypass $http_upgrade;
   }
 
   location = /health {
     proxy_pass ${API_URL}/health;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
+
+    proxy_ssl_server_name on;
+    proxy_set_header Host $proxy_host;
+
+    proxy_set_header Connection "";
+    proxy_read_timeout 60s;
+    proxy_connect_timeout 10s;
+    proxy_send_timeout 60s;
   }
 
   location / {
