--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -4,10 +4,12 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: ["CI"]
-    types:
-      - completed
-    branches:
-      - main
+    types: [completed]
+    branches: [main]
+
+permissions:
+  actions: write
+  contents: read
 
 jobs:
   build-and-push:
