--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -153,6 +153,7 @@ jobs:
         env:
           TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           TF_VAR_image_tag: ${{ github.sha }}
+          TF_VAR_environment_tag: ${{ secrets.ENVIRONMENT_TAG }}
           TF_VAR_nivoda_username: ${{ secrets.NIVODA_USERNAME }}
           TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
@@ -160,6 +161,7 @@ jobs:
           terraform plan \
             -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="image_tag=${GITHUB_SHA::7}" \
+            -var="environment_tag=${{ secrets.ENVIRONMENT_TAG }}" \
             -out=tfplan \
             -no-color
 
@@ -167,6 +169,7 @@ jobs:
         env:
           TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           TF_VAR_image_tag: ${{ github.sha }}
+          TF_VAR_environment_tag: ${{ secrets.ENVIRONMENT_TAG }}
           TF_VAR_nivoda_username: ${{ secrets.NIVODA_USERNAME }}
           TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
