--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,5 @@ PRICING_MODE=CONSOLIDATION
 # Consolidator Performance
 # CONSOLIDATOR_CONCURRENCY=2
 
+NIVODA_PROXY_BASE_URL=https://api-test.fourwords.co.nz
+INTERNAL_SERVICE_TOKEN=super-secret
