--- a/infrastructure/terraform/environments/staging/terraform.tfvars.example
+++ b/infrastructure/terraform/environments/staging/terraform.tfvars.example
@@ -43,3 +43,8 @@ hmac_secrets = "{\"shopify\":\"secret1\",\"internal\":\"secret2\"}"
 resend_api_key   = "re_..."
 alert_email_to   = "alerts@example.com"
 alert_email_from = "noreply@yourdomain.com"
+
+
+# Optional: Nivoda proxy (leave empty for staging unless you also need domain allowlisting)
+nivoda_proxy_base_url  = "https://api-test.fourwords.co.nz"
+internal_service_token = "super-secret-shared-token"
