--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "resend": "^2.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
