--- a/infrastructure/terraform/environments/prod/terraform.tfvars.example
+++ b/infrastructure/terraform/environments/prod/terraform.tfvars.example
@@ -1,61 +1,50 @@
-# Production Environment Configuration Template
-# IMPORTANT: Do NOT commit sensitive values to git!
-#
-# Usage:
-#   1. Copy this file to terraform.tfvars.local (gitignored)
-#   2. Fill in sensitive values in the .local file
-#   3. Or use environment variables: export TF_VAR_database_password="..."
+# prod Environment Configuration
+# Copy this file to terraform.tfvars and fill in sensitive values
 
 subscription_id = "2dade7a0-6731-4d26-ba6d-02228cccbe2d"
 environment     = "prod"
 location        = "australiaeast"
 
-# SKU configurations (production-grade)
-servicebus_sku            = "Standard"
-storage_replication_type  = "GRS" # Geo-redundant for production
-storage_enable_versioning = true  # Enable blob versioning for production
-acr_sku                   = "Standard"
+# Feature flags
+enable_container_apps = true  # Set to true when ready to deploy containers
 
-# Scaling (production capacity — sized for proxy mode with 100-200 workers)
-api_min_replicas          = 2
+# SKU configurations (cost-optimized for prod)
+servicebus_sku           = "Standard"
+storage_replication_type = "LRS"
+acr_sku                  = "Basic"
+
+# Scaling (matching prod for realistic testing)
+api_min_replicas          = 1
 api_max_replicas          = 5
-worker_min_replicas       = 0
-worker_max_replicas       = 200
+worker_min_replicas       = 1
+worker_max_replicas       = 10
 consolidator_min_replicas = 1
-consolidator_max_replicas = 3
+consolidator_max_replicas = 2
 
-# Scheduler runs at 2 AM UTC daily
-scheduler_cron_expression = "0 2 * * *"
+# Worker scaling: 1 message per replica for maximum parallelism
+worker_message_count = 1
 
-# Nivoda production endpoint
-nivoda_endpoint = "https://integrations.nivoda.net/api/diamonds"
+# Scheduler: enabled for manual triggers, but cron set to Feb 31st (never runs)
+enable_scheduler          = true
+scheduler_cron_expression = "0 0 31 2 *"
 
-# ============================================
-# SENSITIVE VALUES BELOW
-# Set these via terraform.tfvars.local or environment variables
-# ============================================
-
+# Nivoda API Configuration
+nivoda_endpoint  = "https://intg-customer-prod.nivodaapi.net/api/diamonds"
+nivoda_username  = "testaccount@sample.com"
+nivoda_password  = "prod-nivoda-22"
+ 
 # Database (Supabase)
-# database_host     = "aws-1-ap-southeast-1.pooler.supabase.com"  # Set via TF_VAR_database_host or .local file
-# database_port     = 5432
-# database_name     = "postgres"
-# database_username = "postgres.xxxxxxxxxxxxx"     # Set via TF_VAR_database_username or .local file
-# database_password = "your-secure-password"       # Set via TF_VAR_database_password or .local file
-
-# Nivoda API
-# nivoda_username = "your-username@example.com"    # Set via TF_VAR_nivoda_username or .local file
-# nivoda_password = "your-password"                # Set via TF_VAR_nivoda_password or .local file
-
+database_url = "postgresql://postgres:superstrongpassword123!@db.yazrhmjedaaplwbsaqob.supabase.co:5432/postgres"
+ 
 # API Configuration
-# hmac_secrets = "{\"client1\":\"secret1\",\"client2\":\"secret2\"}"  # Set via TF_VAR_hmac_secrets or .local file
-
+hmac_secrets = "{\"shopify\":\"secret1\",\"internal\":\"secret2\"}"
+ 
 # Alerts (Resend)
-# resend_api_key   = "re_xxxxxxxxxx"               # Set via TF_VAR_resend_api_key or .local file
-# alert_email_to   = "alerts@yourdomain.com"
-# alert_email_from = "noreply@yourdomain.com"
+resend_api_key   = "re_..."
+alert_email_to   = "alerts@example.com"
+alert_email_from = "noreply@yourdomain.com"
 
 
-# Nivoda proxy (recommended for domain allowlisting)
-# Set these ONLY in production where Nivoda requires a whitelisted domain.
-# nivoda_proxy_base_url  = "https://api.fourwords.co.nz"           # Set via TF_VAR_nivoda_proxy_base_url or .local file
-# internal_service_token = "super-secret-shared-token"            # Set via TF_VAR_internal_service_token or .local file
+# Optional: Nivoda proxy (leave empty for prod unless you also need domain allowlisting)
+nivoda_proxy_base_url  = "https://api-test.fourwords.co.nz"
+internal_service_token = "super-secret-shared-token"
