--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dev:dashboard": "npm run dev -w @diamond/dashboard",
     "dev:demo-api": "npm run dev -w @diamond/demo-feed-api",
     "dev:storefront": "npm run dev -w @diamond/storefront",
+    "dev:ingestion-proxy": "npm run dev -w @diamond/ingestion-proxy",
     "seed:demo-feed": "npm run seed -w @diamond/demo-feed-seed --",
     "worker:retry": "npm run retry -w @diamond/worker --",
     "consolidator:trigger": "npm run trigger -w @diamond/consolidator --",
-    "build": "npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/feed-registry && npm run build -w @diamond/nivoda && npm run build -w @diamond/demo-feed && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/scheduler && npm run build -w @diamond/worker && npm run build -w @diamond/consolidator && npm run build -w @diamond/dashboard && npm run build -w @diamond/storefront",
-    "build:backend": "npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/feed-registry && npm run build -w @diamond/nivoda && npm run build -w @diamond/demo-feed && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/scheduler && npm run build -w @diamond/worker && npm run build -w @diamond/consolidator && npm run build -w @diamond/demo-feed-api",
+    "build": "npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/feed-registry && npm run build -w @diamond/nivoda && npm run build -w @diamond/demo-feed && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/scheduler && npm run build -w @diamond/worker && npm run build -w @diamond/consolidator && npm run build -w @diamond/dashboard && npm run build -w @diamond/storefront && npm run build -w @diamond/ingestion-proxy",
+    "build:backend": "npm run build -w @diamond/shared && npm run build -w @diamond/database && npm run build -w @diamond/feed-registry && npm run build -w @diamond/nivoda && npm run build -w @diamond/demo-feed && npm run build -w @diamond/pricing-engine && npm run build -w @diamond/api && npm run build -w @diamond/scheduler && npm run build -w @diamond/worker && npm run build -w @diamond/consolidator && npm run build -w @diamond/demo-feed-api && npm run build -w @diamond/ingestion-proxy",
     "build:dashboard": "npm run build -w @diamond/dashboard",
     "build:storefront": "npm run build -w @diamond/storefront",
+    "build:ingestion-proxy": "npm run build -w @diamond/ingestion-proxy",
     "test": "npm run test --workspaces --if-present",
     "lint": "eslint . --ext .ts",
     "swagger": "npm run swagger -w @diamond/api",
