--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -18,6 +18,7 @@ COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
 COPY apps/demo-feed-api/package.json ./apps/demo-feed-api/
 COPY apps/demo-feed-seed/package.json ./apps/demo-feed-seed/
+COPY apps/ingestion-proxy/package.json ./apps/ingestion-proxy/
 
 RUN npm ci
 
@@ -50,6 +51,7 @@ COPY apps/worker/package.json ./apps/worker/
 COPY apps/consolidator/package.json ./apps/consolidator/
 COPY apps/demo-feed-api/package.json ./apps/demo-feed-api/
 COPY apps/demo-feed-seed/package.json ./apps/demo-feed-seed/
+COPY apps/ingestion-proxy/package.json ./apps/ingestion-proxy/
 
 RUN npm ci --omit=dev
 
