--- a/tsconfig.check.json
+++ b/tsconfig.check.json
@@ -22,6 +22,7 @@
       "@diamond/demo-feed": ["packages/demo-feed/src/index.ts"],
       "@diamond/pricing-engine": ["packages/pricing-engine/src/index.ts"],
       "@diamond/rating-engine": ["packages/rating-engine/src/index.ts"],
+      "@diamond/ingestion-proxy": ["packages/ingestion-proxy/src/index.ts"],
       "@diamond/api": ["packages/api/src/index.ts"]
     }
   },
