--- a/docker/Dockerfile.ingestion-proxy
+++ b/docker/Dockerfile.ingestion-proxy
@@ -5,13 +5,12 @@ WORKDIR /app
 # Ensure hoisted .bin (tsc, etc.) is on PATH for workspace build scripts
 ENV PATH="/app/node_modules/.bin:$PATH"
 
-# Copy all package.json files for npm workspace resolution
+# Copy all package.json files for npm workspaces
 COPY package*.json ./
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/database/package.json ./packages/database/
 COPY packages/feed-registry/package.json ./packages/feed-registry/
 COPY packages/nivoda/package.json ./packages/nivoda/
-COPY packages/demo-feed/package.json ./packages/nivoda/
 COPY packages/demo-feed/package.json ./packages/demo-feed/
 COPY packages/pricing-engine/package.json ./packages/pricing-engine/
 COPY packages/rating-engine/package.json ./packages/rating-engine/
@@ -23,7 +22,7 @@ COPY apps/demo-feed-api/package.json ./apps/demo-feed-api/
 COPY apps/demo-feed-seed/package.json ./apps/demo-feed-seed/
 COPY apps/ingestion-proxy/package.json ./apps/ingestion-proxy/
 
-RUN npm ci
+RUN npm install
 
 COPY tsconfig.json ./
 COPY packages/shared ./packages/shared
@@ -36,7 +35,7 @@ FROM node:20-alpine
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Copy all package.json files for npm workspace resolution
+# Copy all package.json files for npm workspaces
 COPY package*.json ./
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/database/package.json ./packages/database/
@@ -53,7 +52,7 @@ COPY apps/demo-feed-api/package.json ./apps/demo-feed-api/
 COPY apps/demo-feed-seed/package.json ./apps/demo-feed-seed/
 COPY apps/ingestion-proxy/package.json ./apps/ingestion-proxy/
 
-RUN npm ci --omit=dev
+RUN npm install --omit=dev
 
 COPY --from=builder /app/packages/shared/dist ./packages/shared/dist
 COPY --from=builder /app/apps/ingestion-proxy/dist ./apps/ingestion-proxy/dist
