--- a/.github/workflows/ci-affected-staging.yaml
+++ b/.github/workflows/ci-affected-staging.yaml
@@ -339,76 +339,78 @@ jobs:
       # Each command uses '|| true' so it silently skips resources that are
       # already managed or don't exist. Safe to leave permanently — becomes
       # a no-op once state is fully reconciled.
-      # - name: Import Existing Azure Resources
-      #   env:
-      #     TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      #     TF_VAR_image_tag: ${{ github.sha }}
-      #     TF_VAR_environment_tag: ${{ secrets.ENVIRONMENT_TAG }}
-      #     TF_VAR_nivoda_endpoint: ${{ secrets.NIVODA_ENDPOINT }}
-      #     TF_VAR_nivoda_username: ${{ secrets.NIVODA_USERNAME }}
-      #     TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
-      #     TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
-      #     TF_VAR_database_host: ${{ secrets.DATABASE_HOST }}
-      #     TF_VAR_database_username: ${{ secrets.DATABASE_USERNAME }}
-      #     TF_VAR_database_password: ${{ secrets.DATABASE_PASSWORD }}
-      #     TF_VAR_hmac_secrets: ${{ secrets.HMAC_SECRETS }}
-      #     TF_VAR_alert_email_to: ${{ secrets.ALERT_EMAIL_TO }}
-      #     TF_VAR_alert_email_from: ${{ secrets.ALERT_EMAIL_FROM }}
-      #     TF_VAR_internal_service_token: ${{ secrets.INTERNAL_SERVICE_TOKEN }}
-      #     TF_VAR_nivoda_proxy_base_url: ${{ secrets.NIVODA_PROXY_BASE_URL }}
-      #   run: |
-      #     SUB="${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-      #     RG="diamond-staging-rg"
-      #     P="/subscriptions/${SUB}/resourceGroups/${RG}"
+      - name: Import Existing Azure Resources
+        env:
+          TF_VAR_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          TF_VAR_image_tag: ${{ github.sha }}
+          TF_VAR_environment_tag: ${{ secrets.ENVIRONMENT_TAG }}
+          TF_VAR_nivoda_endpoint: ${{ secrets.NIVODA_ENDPOINT }}
+          TF_VAR_nivoda_username: ${{ secrets.NIVODA_USERNAME }}
+          TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
+          TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
+          TF_VAR_database_host: ${{ secrets.DATABASE_HOST }}
+          TF_VAR_database_username: ${{ secrets.DATABASE_USERNAME }}
+          TF_VAR_database_password: ${{ secrets.DATABASE_PASSWORD }}
+          TF_VAR_hmac_secrets: ${{ secrets.HMAC_SECRETS }}
+          TF_VAR_alert_email_to: ${{ secrets.ALERT_EMAIL_TO }}
+          TF_VAR_alert_email_from: ${{ secrets.ALERT_EMAIL_FROM }}
+          TF_VAR_internal_service_token: ${{ secrets.INTERNAL_SERVICE_TOKEN }}
+          TF_VAR_nivoda_proxy_base_url: ${{ secrets.NIVODA_PROXY_BASE_URL }}
+        run: |
+          SUB="${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+          RG="diamond-staging-rg"
+          P="/subscriptions/${SUB}/resourceGroups/${RG}"
 
-      #     echo "=== Importing existing Azure resources into Terraform state ==="
-      #     echo "Resources already in state will be skipped automatically."
+          echo "=== Importing existing Azure resources into Terraform state ==="
+          echo "Resources already in state will be skipped automatically."
 
-      #     # Resource Group
-      #     terraform import 'azurerm_resource_group.main' \
-      #       "${P}" || true
+          # Resource Group
+          terraform import 'azurerm_resource_group.main' \
+            "${P}" || true
 
-      #     # --- Service Bus module ---
-      #     terraform import 'module.service_bus.azurerm_servicebus_namespace.main' \
-      #       "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus" || true
-      #     terraform import 'module.service_bus.azurerm_servicebus_queue.work_items' \
-      #       "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/work-items" || true
-      #     terraform import 'module.service_bus.azurerm_servicebus_queue.work_done' \
-      #       "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/work-done" || true
-      #     terraform import 'module.service_bus.azurerm_servicebus_queue.consolidate' \
-      #       "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/consolidate" || true
-      #     terraform import 'module.service_bus.azurerm_servicebus_namespace_authorization_rule.app' \
-      #       "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/authorizationRules/app-access" || true
+          # --- Service Bus module ---
+          terraform import 'module.service_bus.azurerm_servicebus_namespace.main' \
+            "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus" || true
+          terraform import 'module.service_bus.azurerm_servicebus_queue.work_items' \
+            "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/work-items" || true
+          terraform import 'module.service_bus.azurerm_servicebus_queue.work_done' \
+            "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/work-done" || true
+          terraform import 'module.service_bus.azurerm_servicebus_queue.consolidate' \
+            "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/queues/consolidate" || true
+          terraform import 'module.service_bus.azurerm_servicebus_namespace_authorization_rule.app' \
+            "${P}/providers/Microsoft.ServiceBus/namespaces/diamond-staging-servicebus/authorizationRules/app-access" || true
 
-      #     # --- Storage module ---
-      #     terraform import 'module.storage.azurerm_storage_account.main' \
-      #       "${P}/providers/Microsoft.Storage/storageAccounts/diamondstagingstore" || true
-      #     terraform import 'module.storage.azurerm_storage_container.watermarks' \
-      #       "https://diamondstagingstore.blob.core.windows.net/watermarks" || true
+          # --- Storage module ---
+          terraform import 'module.storage.azurerm_storage_account.main' \
+            "${P}/providers/Microsoft.Storage/storageAccounts/diamondstagingstore" || true
+          terraform import 'module.storage.azurerm_storage_container.watermarks' \
+            "https://diamondstagingstore.blob.core.windows.net/watermarks" || true
 
-      #     # --- Container Registry module ---
-      #     terraform import 'module.container_registry.azurerm_container_registry.main' \
-      #       "${P}/providers/Microsoft.ContainerRegistry/registries/diamondstagingacr" || true
+          # --- Container Registry module ---
+          terraform import 'module.container_registry.azurerm_container_registry.main' \
+            "${P}/providers/Microsoft.ContainerRegistry/registries/diamondstagingacr" || true
 
-      #     # --- Container Apps module (count=1, so index [0]) ---
-      #     terraform import 'module.container_apps[0].azurerm_log_analytics_workspace.main' \
-      #       "${P}/providers/Microsoft.OperationalInsights/workspaces/diamond-staging-env-logs" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app_environment.main' \
-      #       "${P}/providers/Microsoft.App/managedEnvironments/diamond-staging-env" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app.api' \
-      #       "${P}/providers/Microsoft.App/containerApps/diamond-staging-api" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app.worker' \
-      #       "${P}/providers/Microsoft.App/containerApps/diamond-staging-worker" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app.consolidator' \
-      #       "${P}/providers/Microsoft.App/containerApps/diamond-staging-consolidator" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app.demo_feed_api' \
-      #       "${P}/providers/Microsoft.App/containerApps/diamond-staging-demo-feed-api" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app.dashboard' \
-      #       "${P}/providers/Microsoft.App/containerApps/diamond-staging-dashboard" || true
-      #     terraform import 'module.container_apps[0].azurerm_container_app_job.scheduler[0]' \
-      #       "${P}/providers/Microsoft.App/jobs/diamond-staging-scheduler" || true
+          # --- Container Apps module (count=1, so index [0]) ---
+          terraform import 'module.container_apps[0].azurerm_log_analytics_workspace.main' \
+            "${P}/providers/Microsoft.OperationalInsights/workspaces/diamond-staging-env-logs" || true
+          terraform import 'module.container_apps[0].azurerm_container_app_environment.main' \
+            "${P}/providers/Microsoft.App/managedEnvironments/diamond-staging-env" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.api' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-api" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.worker' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-worker" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.consolidator' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-consolidator" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.demo_feed_api' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-demo-feed-api" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.dashboard' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-dashboard" || true
+          terraform import 'module.container_apps[0].azurerm_container_app.ingestion_proxy' \
+            "${P}/providers/Microsoft.App/containerApps/diamond-staging-ingestion-proxy" || true
+          terraform import 'module.container_apps[0].azurerm_container_app_job.scheduler[0]' \
+            "${P}/providers/Microsoft.App/jobs/diamond-staging-scheduler" || true
 
-      #     echo "=== Import step complete ==="
+          echo "=== Import step complete ==="
 
       - name: Terraform Plan
         env:
