--- a/apps/ingestion-proxy/package.json
+++ b/apps/ingestion-proxy/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^1.1.0",
+    "dotenv": "^16.3.1"
   }
 }
