docs(02): research authentication simplification phase

--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -15,8 +15,7 @@
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.56.0"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
