--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PRICING_MODE=CONSOLIDATION
 
 NIVODA_PROXY_BASE_URL=https://api-test.fourwords.co.nz
 INTERNAL_SERVICE_TOKEN=super-secret
+
+# Dashboard (local dev only — points iframe at storefront dev server)
+VITE_STOREFRONT_URL=http://localhost:5174/storefront
