--- a/docker/nginx.dashboard.conf
+++ b/docker/nginx.dashboard.conf
@@ -49,6 +49,23 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
+  location ^~ /storefront {
+    proxy_pass ${STOREFRONT_URL};
+    proxy_http_version 1.1;
+
+    proxy_ssl_server_name on;
+    proxy_set_header Host $proxy_host;
+
+    proxy_set_header Connection "";
+    proxy_read_timeout 60s;
+    proxy_connect_timeout 10s;
+    proxy_send_timeout 60s;
+
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
   location = /health {
     proxy_pass ${API_URL}/health;
 
