--- a/.github/workflows/ci-affected-staging.yaml
+++ b/.github/workflows/ci-affected-staging.yaml
@@ -349,6 +349,7 @@ jobs:
           TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
           TF_VAR_database_host: ${{ secrets.DATABASE_HOST }}
+          TF_VAR_database_name: ${{ secrets.DATABASE_NAME }}
           TF_VAR_database_username: ${{ secrets.DATABASE_USERNAME }}
           TF_VAR_database_password: ${{ secrets.DATABASE_PASSWORD }}
           TF_VAR_alert_email_to: ${{ secrets.ALERT_EMAIL_TO }}
@@ -426,6 +427,7 @@ jobs:
           TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
           TF_VAR_database_host: ${{ secrets.DATABASE_HOST }}
+          TF_VAR_database_name: ${{ secrets.DATABASE_NAME }}
           TF_VAR_database_username: ${{ secrets.DATABASE_USERNAME }}
           TF_VAR_database_password: ${{ secrets.DATABASE_PASSWORD }}
           TF_VAR_alert_email_to: ${{ secrets.ALERT_EMAIL_TO }}
@@ -455,6 +457,7 @@ jobs:
           TF_VAR_nivoda_password: ${{ secrets.NIVODA_PASSWORD }}
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
           TF_VAR_database_host: ${{ secrets.DATABASE_HOST }}
+          TF_VAR_database_name: ${{ secrets.DATABASE_NAME }}
           TF_VAR_database_username: ${{ secrets.DATABASE_USERNAME }}
           TF_VAR_database_password: ${{ secrets.DATABASE_PASSWORD }}
           TF_VAR_alert_email_to: ${{ secrets.ALERT_EMAIL_TO }}
